SERVER-22525 Revert "Fixes to support building against system boost 1.59"

This reverts commit 53ce96ad0f9d410ef86dc3ad3a4bd45e0ea5eef1.